2010-10-29  Carlos Garcia Campos  <cgarcia@igalia.com>

Reviewed by Andreas Kling.

        [GTK] Crash in TextEncoding.cpp when using glib unicode
        https://bugs.webkit.org/show_bug.cgi?id=48521

        When the conversion to UTF-8 fails, try to encode the original string
        without normalizing. Fixes tests cases:
         fast/url/anchor.html
         fast/url/query.html
         fast/url/standard-url.html

        * platform/text/TextEncoding.cpp:
        (WebCore::TextEncoding::encode):

Canonical link: https://commits.webkit.org/61439@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70935 268f45cc-cd09-0410-ab3c-d52691b4dbfc